    HIGHLIGHTS.txt.

Version 7.5  [ TODO ]

    ENGINE:
        Class GroupExpressionTerm, GroupExpression, GroupPresentation,
                HomGroupPresentation:
            - Now uses size_t instead of unsigned long throughout for
              generator counts and generator indices.
            - The depth argument to GroupPresentation::proliferateRelators()
              is now of type int.

Version 7.4.1  [ 30 November, 2025 ]

    GENERAL:
        - Now builds under clang 16 and on macOS 26.
        - For systems that go out of their way to explicitly disable linking
          against graphviz plugins (e.g., openSUSE Leap 16), you can now work
          around this by passing the cmake flag -DGRAPHVIZ_DYNAMIC_PLUGINS=1 .
    ENGINE:
        Class BoundaryComponent<dim>:
            - Fixed an important bug in build() for real boundary components,
              which gave inconsistencies in the labelling of lower-dimensional
              faces.  See: https://regina-normal.github.io/bugs.html#bcbuild
        Class Face<dim, subdim>
            - Now isLinkOrientable() will compute the orientability of the link
              correctly even for invalid faces with bad self-identifications.
    PYTHON:
        - Added missing Python bindings for Triangulation<dim>::simplices()
          for dimension dim ≥ 5.
    UTILITIES:
        - Fixed a bug in Katie's quadricolour search routine, which would cause
          a segfault when attempting to build a triangulation of a 0-framed
          unknot from certain single-crossing diagrams.

Version 7.4  [ 29 August, 2025 ] - Happy Wear it Purple day!

    GENERAL:
        - Regina now requires C++20 (not C++17).
        - The GUI now requires Qt6 (i.e., dropped support for Qt5).
        - The API docs now require Doxygen ≥ 1.9.2 (not ≥ 1.8.17).
        - Added support for simplex and facet locks throughout the API.  See
          Simplex<dim>::lock() and Simplex<dim>::lockFacet() for an overview