@@ -59,3 +59,33 @@ static_assert(! regina::FaithfulAssignment<
     regina::LargeInteger, regina::Integer>::value);
 static_assert(regina::FaithfulAssignment<
     regina::LargeInteger, regina::LargeInteger>::value);
+
+static_assert(! regina::is_cpp_integer_v<bool>);
+static_assert(! regina::is_unsigned_cpp_integer_v<bool>);
+static_assert(! regina::is_signed_cpp_integer_v<bool>);
+
+static_assert(regina::is_cpp_integer_v<unsigned char>);
+static_assert(regina::is_unsigned_cpp_integer_v<unsigned char>);
+static_assert(! regina::is_signed_cpp_integer_v<unsigned char>);
+
+static_assert(regina::is_cpp_integer_v<signed char>);
+static_assert(! regina::is_unsigned_cpp_integer_v<signed char>);
+static_assert(regina::is_signed_cpp_integer_v<signed char>);
+
+static_assert(regina::is_cpp_integer_v<unsigned long long>);
+static_assert(regina::is_unsigned_cpp_integer_v<unsigned long long>);
+static_assert(! regina::is_signed_cpp_integer_v<unsigned long long>);
+
+static_assert(regina::is_cpp_integer_v<long long>);
+static_assert(! regina::is_unsigned_cpp_integer_v<long long>);
+static_assert(regina::is_signed_cpp_integer_v<long long>);
+
+#if defined(INT128_AVAILABLE)
+static_assert(regina::is_cpp_integer_v<regina::IntOfSize<16>::utype>);
+static_assert(regina::is_unsigned_cpp_integer_v<regina::IntOfSize<16>::utype>);
+static_assert(! regina::is_signed_cpp_integer_v<regina::IntOfSize<16>::utype>);
+
+static_assert(regina::is_cpp_integer_v<regina::IntOfSize<16>::type>);
+static_assert(! regina::is_unsigned_cpp_integer_v<regina::IntOfSize<16>::type>);
+static_assert(regina::is_signed_cpp_integer_v<regina::IntOfSize<16>::type>);
+#endif
